# obelish

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  codecov.yml  eslint.config.js  index.html  justfile  package-lock.json  package.json  playwright.config.ts  stryker.config.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
.githooks/: pre-commit
.github/workflows/: bench-gate.yml  ci.yml  nightly-fuzz.yml  release.yml
cli/: Cargo.toml
cli/src/: client.rs  discovery.rs  main.rs  output.rs
cli/src/commands/: mod.rs  notify.rs  pane.rs  session.rs  workspace.rs
cli/tests/: integration.rs
docs/: cyber-minimal-design-system.md  manual-browser-validation.md  test-trustworthiness-audit.md
e2e/: browser-pane.spec.ts  command-palette.spec.ts  crash-recovery.spec.ts  error-recovery.spec.ts  keyboard-shortcuts.spec.ts  manual-validation.spec.ts  multi-workspace.spec.ts  notifications.spec.ts  pane-split-close.spec.ts  project-open.spec.ts  session-persistence.spec.ts  settings.spec.ts  sidebar.spec.ts  terminal-io.spec.ts  worktree-switch.spec.ts  wsl-paths.spec.ts
e2e/visual/: visual-regression.spec.ts
obelisk-protocol/: Cargo.toml
obelisk-protocol/bindings/: GitInfo.ts  LayoutNode.ts  Notification.ts  PaneInfo.ts  PaneType.ts  PortInfo.ts  ProjectInfo.ts  SplitDirection.ts  SurfaceInfo.ts  WorkspaceInfo.ts  WorktreeInfo.ts
obelisk-protocol/src/: error.rs  framing.rs  lib.rs  methods.rs  rpc.rs
plans/: phase1-scaffold-core-terminal.md  phase2-workspaces-layout.md  phase3-persistence-metadata.md  phase4-notifications.md  phase5-browser-panels.md  phase6-command-palette-shortcuts.md  phase7-cli.md  phase8-polish.md  prd.md  project-worktree-refactor.md  tdd-guidelines.md  testing-strategy.md
plans/round1/: backend.md  frontend.md  pm.md  qa.md  tech-lead.md
plans/round2/: backend.md  frontend.md  pm.md  qa.md  tech-lead.md
plans/round3/: backend.md  frontend.md  pm.md  qa.md  tech-lead.md
scripts/: mutation-trend.sh
src/: App.test.tsx  App.tsx  index.css  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  mutants.toml  tauri.conf.json
src-tauri/benches/: benchmarks.rs
src-tauri/bindings/: PtyConfig.ts  PtySpawnResult.ts
src-tauri/fuzz/: Cargo.toml
src-tauri/fuzz/fuzz_targets/: fuzz_git_parser.rs  fuzz_ipc_framing.rs  fuzz_osc_parser.rs  fuzz_ports_parser.rs  fuzz_session_deser.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/ipc_server/: connection.rs  discovery.rs  error.rs  handlers.rs  listener.rs  mod.rs
src-tauri/src/metadata/: git.rs  mod.rs  ports.rs
src-tauri/src/notifications/: mod.rs  osc_parser.rs  store.rs
src-tauri/src/persistence/: fs.rs  mod.rs  session.rs
src-tauri/src/project/: mod.rs
src-tauri/src/pty/: backend.rs  emitter.rs  manager.rs  mod.rs  types.rs
src-tauri/src/scrollback/: mod.rs  storage.rs
src-tauri/src/settings/: manager.rs  mod.rs
src-tauri/src/workspace/: mod.rs  state.rs  stress_tests.rs  types.rs
src-tauri/tests/: config_validation.rs  pty_integration.rs  workspace_lifecycle.rs
src/__mocks__/: react-resizable-panels.tsx  tauri-test.d.ts  xterm.css
src/__mocks__/@xterm/: addon-fit.ts  addon-serialize.ts  addon-webgl.ts  xterm.ts
src/components/: AppLayout.tsx
src/hooks/: useAppShortcuts.ts  useBrowser.ts  useGitInfo.ts  useKeyboardShortcuts.ts  useNotificationListener.ts  usePaneCwd.ts  usePortScanner.ts  useThemeColors.ts
src/lib/: auto-split.ts  browser-mock.ts  commands.ts  fuzzy-search.ts  keybinding-utils.ts  safe-listen.ts  tauri-bridge.ts  terminal-theme.ts  workspace-types.ts
src/stores/: notificationStore.ts  projectStore.ts  settingsStore.ts  uiStore.ts  workspaceStore.ts
(+77 files in other folders)
