[workspace]
members = ["src-tauri", "cli", "obelisk-protocol"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.release.package.obelisk-cli]
opt-level = "z"
