[package]
name = "obelisk-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "obelisk"
path = "src/main.rs"

[dependencies]
obelisk-protocol = { path = "../obelisk-protocol" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
uuid = { workspace = true }
