[package]
name = "obelisk-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }
ts-rs = "10"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
