[package]
name = "obelisk"
version = "0.1.0"
edition = "2021"

[lib]
name = "obelisk_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
ts-rs = "10"
portable-pty = "0.8"
base64 = "0.22"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
obelisk-protocol = { path = "../obelisk-protocol" }
zstd = "0.13"

[dev-dependencies]
mockall = "0.13"
toml = "0.8"
serde_yaml = "0.9"
proptest = "1"
tempfile = "3"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { workspace = true, features = ["test-util"] }
assert_matches = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
